--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-  
+    <div id="blog"></div>
 </body>
 <script src="app.js"></script>
 </html>
